Added possibility to search for phrase matching using quotation marks

--- a/csvtouch.plist
+++ b/csvtouch.plist
@@ -6,6 +6,8 @@
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
 	<string>${PRODUCT_NAME}</string>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
