--- a/Entitlements.plist
+++ b/Entitlements.plist
@@ -7,6 +7,7 @@
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
 		<string>iCloud.se.ozymandias.csvtouch</string>
+		<string>iCloud.se.ozymandias.csvlite</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -15,6 +16,7 @@
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
 		<string>iCloud.se.ozymandias.csvtouch</string>
+		<string>iCloud.se.ozymandias.csvlite</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
